@@ -81,7 +81,8 @@ Changes for v2.00
 - Edit a Manual Protocol by double clicking any of PID, Variant or Protocol columns of Devices tab (Graham)
 - Fix bug in handling of entries in RDF [DeviceTypes] section when a DevTypeNum value is given with no high byte (Graham)
 - Fix bug that prevented keymoves being updated in buffer when a new device upgrade was assigned to a device button in answer to the prompt (Graham)
-- Fix bug with raw data of keymoves when AdvCodeFormat=EFC (Graham) 
+- Fix bug with raw data of keymoves when AdvCodeFormat=EFC (Graham)
+- Prevent multiple fixed data prompts and prevent any appearing when opening a remote with New (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
